@startuml

title __OBSERVER's Class Diagram__\n

  namespace es.ull {
    class es.ull.VentanaPrincipal {
    }
  }
  

  namespace es.ull {
    namespace charts {
      class es.ull.charts.BarChartStrategy {
      }
    }
  }
  

  namespace es.ull {
    namespace charts {
      class es.ull.charts.GraphicContext {
      }
    }
  }
  

  namespace es.ull {
    namespace charts {
      interface es.ull.charts.IChartStrategy {
      }
    }
  }
  

  namespace es.ull {
    namespace charts {
      class es.ull.charts.LineChartStrategy {
      }
    }
  }
  

  namespace es.ull {
    namespace charts {
      class es.ull.charts.PieChartStrategy {
      }
    }
  }
  

  namespace es.ull {
    namespace controllers {
      class es.ull.controllers.Controller {
      }
    }
  }
  

  namespace es.ull {
    namespace controllers {
      class es.ull.controllers.CovidController {
      }
    }
  }
  

  namespace es.ull {
    namespace controllers {
      class es.ull.controllers.WeatherController {
      }
    }
  }
  

  namespace es.ull {
    namespace menus {
      class es.ull.menus.CovidMenu {
      }
    }
  }
  

  namespace es.ull {
    namespace menus {
      class es.ull.menus.TwitterMenu {
      }
    }
  }
  

  namespace es.ull {
    namespace menus {
      class es.ull.menus.WeatherMenu {
      }
    }
  }
  

  namespace es.ull {
    namespace models {
      class es.ull.models.CovidModel {
      }
    }
  }
  

  namespace es.ull {
    namespace models {
      class es.ull.models.Model {
      }
    }
  }
  

  namespace es.ull {
    namespace models {
      class es.ull.models.WeatherModel {
      }
    }
  }
  

  namespace es.ull {
    namespace twitter {
      class es.ull.twitter.TwitterConector {
      }
    }
  }
  

  namespace es.ull {
    namespace views {
      class es.ull.views.VistaCovid {
      }
    }
  }
  

  namespace es.ull {
    namespace views {
      class es.ull.views.VistaTwitter {
      }
    }
  }
  

  namespace es.ull {
    namespace views {
      class es.ull.views.VistaWeather {
      }
    }
  }
  

  es.ull.VentanaPrincipal -up-|> javax.swing.JFrame
  es.ull.VentanaPrincipal o-- es.ull.views.VistaCovid : vistaCovid
  es.ull.VentanaPrincipal o-- es.ull.views.VistaTwitter : vistaTwitter
  es.ull.VentanaPrincipal o-- es.ull.views.VistaWeather : vistaWeather
  es.ull.charts.BarChartStrategy .up.|> es.ull.charts.IChartStrategy
  es.ull.charts.BarChartStrategy -up-|> org.jfree.ui.ApplicationFrame
  es.ull.charts.GraphicContext -up-|> org.jfree.ui.ApplicationFrame
  es.ull.charts.GraphicContext o-- es.ull.charts.IChartStrategy : myIChartStrategy
  es.ull.charts.LineChartStrategy .up.|> es.ull.charts.IChartStrategy
  es.ull.charts.LineChartStrategy -up-|> org.jfree.ui.ApplicationFrame
  es.ull.charts.PieChartStrategy .up.|> es.ull.charts.IChartStrategy
  es.ull.charts.PieChartStrategy -up-|> org.jfree.ui.ApplicationFrame
  es.ull.controllers.Controller .up.|> java.lang.Runnable
  es.ull.controllers.Controller o-- es.ull.charts.GraphicContext : gc
  es.ull.controllers.Controller o-- es.ull.models.Model : twitterModel
  es.ull.controllers.CovidController .up.|> java.lang.Runnable
  es.ull.controllers.CovidController o-- es.ull.models.CovidModel : covidModel
  es.ull.controllers.CovidController o-- es.ull.charts.GraphicContext : gc
  es.ull.controllers.WeatherController .up.|> java.lang.Runnable
  es.ull.controllers.WeatherController o-- es.ull.charts.GraphicContext : gc
  es.ull.controllers.WeatherController o-- es.ull.models.WeatherModel : weatherModel
  es.ull.menus.CovidMenu .up.|> java.awt.event.ActionListener
  es.ull.menus.CovidMenu -up-|> javax.swing.JInternalFrame
  es.ull.menus.CovidMenu o-- es.ull.views.VistaCovid : vistaCovid
  es.ull.menus.TwitterMenu .up.|> java.awt.event.ActionListener
  es.ull.menus.TwitterMenu -up-|> javax.swing.JInternalFrame
  es.ull.menus.TwitterMenu o-- es.ull.views.VistaTwitter : vistaTwitter
  es.ull.menus.WeatherMenu .up.|> java.awt.event.ActionListener
  es.ull.menus.WeatherMenu -up-|> javax.swing.JInternalFrame
  es.ull.menus.WeatherMenu o-- es.ull.views.VistaWeather : vistaWeather
  es.ull.models.Model .up.|> java.lang.Runnable
  es.ull.models.WeatherModel .up.|> java.lang.Runnable
  es.ull.views.VistaCovid -up-|> javax.swing.JDesktopPane
  es.ull.views.VistaCovid o-- es.ull.menus.CovidMenu : covidMenu
  es.ull.views.VistaTwitter -up-|> javax.swing.JDesktopPane
  es.ull.views.VistaTwitter o-- es.ull.menus.TwitterMenu : menuTwitter
  es.ull.views.VistaWeather -up-|> javax.swing.JDesktopPane
  es.ull.views.VistaWeather o-- es.ull.menus.WeatherMenu : weatherMenu


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
